# rustygit

./: .gitignore  Cargo.toml  README.md  et --hard 07c688f7d43fb3331d2246fb6f51f7d8ef80b199  main.py  pyproject.toml
docs/: Makefile
docs/source/: conf.py  index.rst  installation.rst  introduction.rst
docs/source/api/: branch.rst  commit.rst  index.rst  repository.rst
docs/source/usage/: index.rst  repositories.rst
python/rustygit/: repo.pyi
python/rustygit/commits/: model.pyi
src/: branch.rs  commit.rs  lib.rs  repo.rs  utils.rs
src/commits/: logic.rs  mod.rs  model.rs
